--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,58 +1,52 @@
 volumes:
-  pg_data:
-  static:
-  media:
+  pg_data_production:
+  static_volume:
+  media_volume:
 
 services:
   db:
     image: postgres:13
-    volumes:
-      - pg_data:/var/lib/postgresql/data
     env_file:
       - .env
+    volumes:
+      - pg_data_production:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: rum6/kittygram_backend:latest
     env_file:
       - .env
     volumes:
-      - static:/backend_static
-      - media:/media
+      - static_volume:/backend_static
+      - media_volume:/media
     depends_on:
       - db
     environment:
-      - DB_HOST=db
-      - DB_PORT=5432
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: rum6/kittygram_frontend:latest
+    env_file:
+      - .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static
+      - static_volume:/frontend_static
     depends_on:
       - backend
 
   gateway:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    image: rum6/kittygram_gateway:latest
     env_file:
       - .env
     ports:
       - 8000:80
     volumes:
-      - static:/staticfiles
-      - media:/media
+      - static_volume:/staticfiles
+      - media_volume:/media
     depends_on:
       - backend
       - frontend
-
-
