--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_pass http://backend:8000/api/;
     }
 
@@ -15,7 +16,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Connection "";
         proxy_pass http://backend:8000/admin/;
     }
 
@@ -24,8 +24,8 @@ server {
     }
 
     location /static/ {
-            alias /staticfiles/;
-        }
+        alias /staticfiles/;
+    }
 
     location / {
         alias /staticfiles/;
