--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     index index.html;
+    server_tokens off;
 
     location /api/ {
         proxy_set_header Host $http_host;
@@ -8,6 +9,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
         proxy_pass http://backend:8000/api/;
     }
 
@@ -16,6 +18,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
         proxy_pass http://backend:8000/admin/;
     }
 
