--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,8 +135,8 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "docker-compose.production.yml,.env"
-          target: "kittygram"
+          source: 'docker-compose.production.yml,.env'
+          target: 'kittygram'
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
